# h2020_bam

./: .gitignore  README.md  pyproject.toml
data_loader/: config.yaml  config_loader.py  data_loader.py  data_preprocessing.py
evaluation/: evaluation.py  feature_importance.py
logging_util/: config.yaml  logger.py
models/: __init__.py  base.py
models/LassoRegressor/: config.yaml  estimator.py
models/RandomForestRegressor/: config.yaml  estimator.py
models/XgboostRegressor/: config.yaml  estimator.py
notebooks/: calculate shap.ipynb  target_prediction.ipynb
