[tool.poetry]
name = "bam"
version = "0.0.1"
description = "Python for Bio-Accelerated Minereal weathering (BAM) project"
authors = ["Iris Janssens", "Thomas Servotte", "Steven Mortier", "Tim Verdonck"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^1.5.0"
jupyter = "^1.0.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
numpy = "1.23.3"
matplotlib = "^3.6.0"
pytest = "^7.1.3"
pydantic = "^1.10.2"
anyconfig = "^0.13.0"
PyYAML = "^6.0"
openpyxl = "^3.0.10"
xgboost = "^1.7.1"
black = "^22.10.0"
requests = "^2.28.1"
shap = "^0.41.0"
xlrd = "^2.0.1"
seaborn = "^0.12.1"
catboost = "^1.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true